@@ -101,8 +101,8 @@ public class UserService implements UserDetailsService {
         }
 
         User user = new User();
-        user.setEmail(result.getFirst().getUsername());
-        user.setPassword(result.getFirst().getPassword());
+        user.setEmail(result.get(0).getUsername());
+        user.setPassword(result.get(0).getPassword());
         for (UserDetailsProjection p : result) {
             user.addRole(new Role(p.getRoleId(), p.getAuthority()));
         }
